# live555client

./: CMakeLists.txt  README.md
include/live555client/: Live555Client.h
src/: CMakeLists.txt  Live555Client.cpp  RtspStream.cpp  RtspStream.h
test/: CMakeLists.txt  test_rtsp_client.cpp
